--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "hyperlog-join-index",
+  "name": "hyperlog-join",
   "version": "1.0.0",
-  "description": "",
+  "description": "relational joins over a hyperlog",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape test/*.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "hyperlog",
+    "index",
+    "materialized view"
+  ],
+  "author": "substack",
+  "license": "BSD",
   "dependencies": {
     "hyperlog-index": "^4.0.0",
     "read-only-stream": "^2.0.0",
@@ -19,5 +23,17 @@
     "hyperlog": "^4.7.0",
     "memdb": "^1.3.1",
     "tape": "^4.4.0"
-  }
+  },
+  "directories": {
+    "example": "example",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/substack/hyperlog-join.git"
+  },
+  "bugs": {
+    "url": "https://github.com/substack/hyperlog-join/issues"
+  },
+  "homepage": "https://github.com/substack/hyperlog-join#readme"
 }
