--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "BSD",
   "dependencies": {
     "hyperlog-index": "^4.0.0",
+    "inherits": "^2.0.1",
     "read-only-stream": "^2.0.0",
     "subleveldown": "^2.1.0",
     "through2": "^2.0.0"
